# python-postaccess

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
.github/workflows/: ci.yml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
api/postaccess/: index.html
api/postaccess.main/: index.html
api/postaccess.spf/: index.html
api/source/postaccess/: index.html
api/source/postaccess.main/: index.html
api/source/postaccess.spf/: index.html
api/source/spf2acl/: index.html
api/source/spf2acl.main/: index.html
api/source/spf2acl.spf/: index.html
api/spf2acl/: index.html
api/spf2acl.main/: index.html
api/spf2acl.spf/: index.html
dev/: .coveragerc  codecov.yml  os_version.py
docs/: CONTRIBUTING.md
search/: search_index.json
src/postaccess/: __about__.py  __init__.py  main.py  parser.py  spf.py
src/spf2acl/: __about__.py  __main__.py  _version.py  main.py  spf.py
tests/: __init__.py  test_about.py  test_macro.py  test_main.py  test_parser.py
