[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88

[tool.commitizen]
name = "cz_conventional_commits"
version = "21.04.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"

[tool.flakehell]
exclude = []
format = "grouped"
max_line_length = 88
show_source = true

[tool.flakehell.exceptions."*/__init__.py"]
pyflakes = ["-F401"]

[tool.flakehell.exceptions."tests/"]
flake8-docstrings = ["-D1??"]
flake8-darglint = ["-DAR*", "+D0??"]
flake8-bandit = ["-S101"]

[tool.flakehell.plugins]
dlint = ["+*"]
flake8-alfred = ["+*"]
flake8-bandit = ["+*"]
flake8-black = ["+*"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*", "-D401", "-D412"]
flake8-logging-format = ["+*"]
flake8-pytest-style = ["+*"]
flake8-typing-imports = ["+*"]
flake8-use-fstring-format = ["+*"]
flake8-use-fstring-percent = ["+*"]
flake8-use-fstring-prefix = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*", "-C0103", "-C0114", "-C0115", "-C0116", "-E0401"]

[tool.isort]
line_length = 88
multi_line_output = 3
balanced_wrapping = true
atomic = true
lines_after_imports = 2
lines_between_types = 1
combine_star = true
include_trailing_comma = true
use_parentheses = true
known_first_party = "postaccess"
known_third_party = []

[tool.poetry]
authors = ["NimVek <NimVek@users.noreply.github.com>"]
classifiers = [
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Mail Transport Agents",
    "Intended Audience :: System Administrators",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 3 - Alpha",
]
description = "Generator for Postscreen accesslist based on senders' SPF records."
license = "GPL-3.0-or-later"
name = "postaccess"
readme = "README.md"
repository = "https://github.com/NimVek/python-postaccess"
version = "21.04.0"

[tool.poetry.dependencies]
incremental = "^17.5.0"
python = "^3.8"
netaddr = "^0.8.0"
pyparsing = "^2.4.7"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
commitizen = "^2.17.6"
darglint = "^1.8.0"
dlint = "^0.11.0"
flake8 = "^3.9.2"
flake8-alfred = "^1.1.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.4.0"
flake8-docstrings = "^1.6.0"
flake8-logging-format = "^0.6.0"
flake8-markdown = "^0.2.0"
flake8-pytest-style = "^1.4.1"
flake8-typing-imports = "^1.10.1"
flake8-use-fstring = "^1.1"
flakehell = "^0.9.0"
ipython = "^7.23.1"
mkapi = "^1.0.14"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.4"
mkdocs-simple-hooks = "^0.1.3"
mypy = "^0.812"
pre-commit = "^2.12.1"
pytest = "^6.2.4"
pytest-cov = "^2.11.1"
pytest-randomly = "^3.7.0"
pytest-xdist = "^2.2.1"
toml-sort = "^0.19.0"

[tool.poetry.scripts]
postaccess = 'postaccess.main:main'
